--- a/.github/workflows/lambdas-create-pr.yml
+++ b/.github/workflows/lambdas-create-pr.yml
@@ -1,4 +1,4 @@
-name: Validate Terraform, Run Tests, and Create Pull Request!
+name: Validate Terraform, and Create Pull Request!
 
 on:
   pull_request:
@@ -27,7 +27,6 @@ jobs:
 
   sync-develop-to-main:
     runs-on: ubuntu-latest
-    needs: run-tests  # Só cria o PR se os testes passarem
     if: success()  # Executa apenas se os jobs anteriores forem bem-sucedidos
 
     steps:
