--- a/.github/workflows/lambdas-deploy.yml
+++ b/.github/workflows/lambdas-deploy.yml
@@ -17,7 +17,11 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Install AWS CLI
-        run: sudo apt-get install -y awscli
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version  # Verifica se a instalação foi bem-sucedida
 
       - name: Build Lambda Layer
         run: |
